--- a/MakingRNASeqFigures_RY.Rmd
+++ b/MakingRNASeqFigures_RY.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(echo = TRUE)
 tpm_vsd1 <- read.table("vsd1TPMsacrossStrains.txt", sep = "\t")
 
 
-prc2_genes <- c("S238", "NCU05460", "NCU05300", "cac3")
+prc2_complex_genes <- c("S238", "NCU05460", "NCU05300", "cac3")
 quantiles_vsd1 <- quantile(tpm_vsd1$TPM, c(0.05, 0.95))
 top_rows <- filter(tpm_vsd1, tpm_vsd1$TPM >= quantiles_vsd1[2])
 bottom_rows <- filter(tpm_vsd1, tpm_vsd1$TPM <= quantiles_vsd1[1])
